--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,9 @@ h3 {
     height: 200px;
     overflow: scroll;
 }
+.code{
+        font-size: 70%;
+    }
 /* Media Queries */
 
 @media only screen and (max-width: 670px) {
