--- a/css/main.css
+++ b/css/main.css
@@ -163,7 +163,7 @@ h3 {
     font-size: 70%;
     text-align: left;
     height: 200px;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 .code{
         font-size: 70%;
